--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ ext {
     ]
     dependenciesVersion = [
             appcompatVersion: '1.7.0-alpha01',
-            materialVersion : '1.8.0-alpha03',
+            materialVersion : '1.8.0-beta01',
             lifecycleVersion: "2.6.0-alpha03"
     ]
 }
