--- a/core/build.gradle
+++ b/core/build.gradle
@@ -43,16 +43,15 @@ dependencies {
     api "androidx.lifecycle:lifecycle-runtime-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$dependenciesVersion.lifecycleVersion"
-    api 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
+    api 'androidx.constraintlayout:constraintlayout:2.2.0-alpha05'
     api 'androidx.navigation:navigation-fragment-ktx:2.6.0-alpha04'
     api 'androidx.navigation:navigation-ui-ktx:2.6.0-alpha04'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-    api 'androidx.webkit:webkit:1.6.0-alpha03'
-    api 'androidx.work:work-runtime-ktx:2.8.0-beta02'
+    api 'androidx.webkit:webkit:1.6.0-beta01'
+    api 'androidx.work:work-runtime-ktx:2.8.0-rc01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:16.0'
     api 'com.github.fondesa:recycler-view-divider:3.5.0'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     // 下拉刷新-上拉加载
     api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
     api 'io.github.scwang90:refresh-header-classics:2.0.5'
@@ -70,10 +69,3 @@ afterEvaluate {
         }
     }
 }
-
-//
-//ext {
-//    PUBLISH_ARTIFACT_ID = "core"
-//}
-//
-//apply from: '../publish.gradle'
