--- a/extend-echarts/build.gradle
+++ b/extend-echarts/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
-    implementation 'androidx.webkit:webkit:1.6.0-alpha03'
+    implementation 'androidx.webkit:webkit:1.6.0-beta01'
 }
 
 afterEvaluate {
@@ -49,10 +49,3 @@ afterEvaluate {
         }
     }
 }
-
-//
-//ext {
-//    PUBLISH_ARTIFACT_ID = "basic"
-//}
-//
-//apply from: '../publish.gradle'
