--- a/core/build.gradle
+++ b/core/build.gradle
@@ -51,8 +51,9 @@ dependencies {
     api 'androidx.work:work-runtime-ktx:2.8.0-rc01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:16.5'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.11'
+    api 'jp.wasabeef:recyclerview-animators:4.0.2'
     api 'com.github.fondesa:recycler-view-divider:3.5.0'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.11'
     // 下拉刷新-上拉加载
     api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
     api 'io.github.scwang90:refresh-header-classics:2.0.5'
