--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     api 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     api 'androidx.paging:paging-runtime:3.2.0-alpha03'
+    implementation 'androidx.core:core-ktx:+'
 }
 
 afterEvaluate {
