--- a/core/build.gradle
+++ b/core/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     api "androidx.lifecycle:lifecycle-runtime-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$dependenciesVersion.lifecycleVersion"
-    api 'androidx.constraintlayout:constraintlayout:2.2.0-alpha05'
+    api 'androidx.constraintlayout:constraintlayout:2.2.0-alpha06'
     api 'androidx.navigation:navigation-fragment-ktx:2.6.0-alpha04'
     api 'androidx.navigation:navigation-ui-ktx:2.6.0-alpha04'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-    api 'androidx.webkit:webkit:1.6.0-beta01'
+    api 'androidx.webkit:webkit:1.7.0-alpha01'
     api 'androidx.work:work-runtime-ktx:2.8.0-rc01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:16.5'
