--- a/extend-echarts/build.gradle
+++ b/extend-echarts/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
-    implementation 'androidx.webkit:webkit:1.6.0-beta01'
+    implementation 'androidx.webkit:webkit:1.7.0-alpha01'
 }
 
 afterEvaluate {
